# sand-project

./: CMakeLists.txt  README.md
.github/workflows/: run_tests.yml
docker/: Dockerfile
include/glad/: glad.h
src/: CMakeLists.txt  glad.c  main.cpp  sand_calculator.cpp  sand_calculator.hpp  sand_calculator_CUDA.cu  scene_drawer.cpp  scene_drawer.hpp  tests.cpp
